2nd training/Community/Community/Community1/force-app/main/default/objects/Meeting_Note__c/Meeting_Note__c.object-meta.xml
<CustomObject>
    <label>Meeting Note</label>
    <nameField>
        <label>Meeting Note	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>