2nd training/Community/Community/Community1/force-app/main/default/objects/Meeting_Note__c/fields/Action_by__c.field-meta.xml
<CustomField>
    <fullName>Action_by__c</fullName>
    <label>Action by</label>
    <length>99</length>
    <type>Text</type>
</CustomField>