2nd training/Community/Community/Community1/force-app/main/default/objects/Meeting_Note__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Meeting Notes</relationshipLabel>
    <relationshipName>Meeting_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>