2nd training/Community/Community/Community1/force-app/main/default/objects/Meeting_Note__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>